--- a/templates/report.html
+++ b/templates/report.html
@@ -1,8 +1,13 @@
 {% extends "base.html" %}
+{% block head %}
+<script src='https://api.mapbox.com/mapbox-gl-js/v1.11.1/mapbox-gl.js'></script>
+<link href='https://api.mapbox.com/mapbox-gl-js/v1.11.1/mapbox-gl.css' rel='stylesheet' />
+{% endblock %}
 {% block content %}
 <h1>AQ Report Sheet Generator</h1>
-<h2>Here's Your Report</h2>
-<h3>You have selected (DEBUG):</h3>
+<h2>Here's Your Report for Charlotte, NC, US</h2>
+<details>
+<summary>[DEBUG] Your request parameters (click to expand)</summary>
 <ul>
     <li>Place: {{ placeName }}</li>
     <li>Averaging Time: {{ averaging_time }}</li>
@@ -10,17 +15,34 @@
     <li>Date Starting: {{ date_from }}</li>
     <li>Date Ending: {{ date_to }}</li>
 </ul>
+</details>
 <div>
     <h3>Stats</h3>
     <p>To be added...</p>
     <h3>Charts</h3>
     <p>To be added...</p>
     <h3>Map of sensor locations</h3>
-    <p>To be added...</p>
+    <div id='map' style='width: 400px; height: 300px;'></div>
     <h3>Download options</h3>
     <button>Download Report -></button>
     <button>Download Data -></button>
     <h3>Learn More</h3>
     <a href="/resources">Learn More</a>
 </div>
+<script>
+    mapboxgl.accessToken = '{{ mapbox_access_token }}';
+    var map = new mapboxgl.Map({
+    container: 'map',
+    style: 'mapbox://styles/mapbox/streets-v11'
+    });
+    map.addControl(new mapboxgl.NavigationControl());
+    map.addControl(
+        new mapboxgl.GeolocateControl({
+            positionOptions: {
+                enableHighAccuracy: true
+            },
+            trackUserLocation: true
+        })
+    );
+</script>
 {% endblock %}
