--- a/templates/report.html
+++ b/templates/report.html
@@ -9,7 +9,7 @@
 <details>
 <summary>[DEBUG] Your request parameters (click to expand)</summary>
 <ul>
-    <li>Place: {{ placeName }}</li>
+    <li>Place: {{ place_name }}</li>
     <li>Averaging Time: {{ averaging_time }}</li>
     <li>Pollutants: {{ pollutants }}</li>
     <li>Date Starting: {{ date_from }}</li>
