--- a/templates/resources.html
+++ b/templates/resources.html
@@ -1,5 +1,7 @@
 {% extends "base.html" %}
 {% block content %}
+<div class="w3-container">
 <h1>Resources</h1>
 <p>To be added</p>
+</div>
 {% endblock %}
