--- a/templates/base.html
+++ b/templates/base.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
     <head>
+        <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css"> 
         {% block head %}
         {% endblock %}
     </head>
