change default averaging option

--- a/templates/index.html
+++ b/templates/index.html
@@ -14,8 +14,8 @@
 
     <label for="time">Averaging Time Interval:</label>
     <select id="time" name="time">
-        <option value="monthly">Monthly</option>
-        <option value="weekly" selected="selected">Weekly</option>
+        <option value="monthly" selected="selected">Monthly</option>
+        <option value="weekly">Weekly</option>
         <option value="hourly">Hourly</option>
     </select> (This is for choosing how detailed the data should be)<br/>
     <label for="pollutants">Pollutants (You can pick any number of pollutants)</label><br>
