fix dateTo element

--- a/templates/index.html
+++ b/templates/index.html
@@ -36,7 +36,7 @@
     <label for="dateFrom">Date starting at</label>
     <input type="date" id="dateFrom" name="dateFrom" /> (This is for defining the range of data you want to look at)<br>
     <label for="dateTo">Until</label>
-    <input type="date" id="dateTo" name="dateFrom" /><br>
+    <input type="date" id="dateTo" name="dateTo" /><br>
     <input type="submit" value="GO!" class="w3-button w3-blue w3-large w3-wide"/>
 </form>
 <script>
