--- a/templates/report.html
+++ b/templates/report.html
@@ -10,7 +10,7 @@
 {% endblock %}
 {% block content %}
 <div class="w3-container">
-<h1>AQ Report Sheet Generator</h1>
+<h1 class="w3-text-blue">AQ Report Sheet Generator</h1>
 <div id="share">
     Share this page:
     <input type="text" id="currentURL" readonly="readonly"><button onclick="copyLink()" class="w3-button w3-border">Copy link</button> 
