--- a/templates/base.html
+++ b/templates/base.html
@@ -5,9 +5,9 @@
         {% endblock %}
     </head>
     <body>
-        <ul>
-            <li><a href="/">Start Here</a></li>
-            <li><a href="/resources">Resources</a></li>
+        <ul class="w3-bar w3-light-grey">
+            <li class="w3-bar-item w3-button"><a href="/">Start Here</a></li>
+            <li class="w3-bar-item w3-button"><a href="/resources">Resources</a></li>
         </ul>
         {% block content %}{% endblock %}
     </body>
