--- a/templates/base.html
+++ b/templates/base.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
     <head>
         <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css"> 
+        <link rel="icon" type="image/x-icon" href="{{ url_for('static', filename='favicon.ico') }}"/>
         {% block head %}
         {% endblock %}
     </head>
