--- a/templates/index.html
+++ b/templates/index.html
@@ -8,20 +8,22 @@
 <form action="/report" method="get" class="w3-half">
     <label for="placeName"><b>Place:</b></label>
     <input class="w3-input w3-border" list="countries" type="text" id="placeName" name="placeName" required="required" placeholder="e.g. India" autocomplete="off" />
+    <input type="hidden" id="placeType" name="placeType" />
+    <input type="hidden" id="placeID" name="placeID" />
     <div class="w3-right-align">This can be a country or a city name.</div>
     <ul id="suggestions" class="w3-ul w3-hoverable">
         <li class="suggested-item"></li>
     </ul>
 
     <label for="time"><b>Averaging Time Interval:</b></label>
-    <select id="time" name="time" class="w3-input w3-border">
-        <option value="monthly" selected="selected">Monthly</option>
-        <option value="weekly">Weekly</option>
-        <option value="hourly">Hourly</option>
+    <select id="time" name="temporal" class="w3-input w3-border">
+        <option value="year" selected="selected">Yearly</option>
+        <option value="month">Monthly</option>
+        <option value="day">Daily</option>
     </select>
     <div class="w3-right-align">This is for choosing how detailed the data should be.</div>
 
-    <label for="pollutants"><b>Pollutants</b></label>
+    <!-- <label for="pollutants"><b>Pollutants</b></label>
     <div>
         <input type="checkbox" value="pm25" id="pm25" name="pm25" checked="checked" class="w3-check"/>
         <label for="pm25">PM2.5</label>
@@ -49,7 +51,7 @@
     <div>
         <input type="checkbox" value="bc" id="bc" name="bc" checked="checked" class="w3-check" />
         <label for="pm10">BC</label><br>
-    </div>
+    </div> -->
     <div>
         <label for="dateFrom"><b>Date starting at</b></label>
         <input type="date" id="dateFrom" name="dateFrom" class="w3-input w3-border" />
@@ -79,7 +81,7 @@
 
     // called on the search input changes
     function displayMatchedPlaces() {
-        // don't do when there's no value
+        // stop when there's no input value
         if (this.value.length == 0) return;
 
         const result = findPlace(this.value, places);
@@ -87,7 +89,7 @@
             return `
                 <li class="suggested-item"
                     data-name="${place.name}"
-                    data-id="${place.id}"
+                    data-id="${place.id || ''}"
                     data-type="${place.type}">
                     <span class="suggestion-name">${place.name}</span>
                 </li>
@@ -98,7 +100,9 @@
         const suggestedItems = document.querySelectorAll(".suggested-item");
         suggestedItems.forEach(i => i.addEventListener('click', function() {
             document.querySelector('#placeName').value = this.dataset.name;
-            // todo: also set hidden form fields
+            document.querySelector('#placeType').value = this.dataset.type;
+            // note: cities has no ID
+            document.querySelector('#placeID').value = this.dataset.id;
             console.log(this.dataset.name)
 
             // reset suggestions list
