--- a/templates/index.html
+++ b/templates/index.html
@@ -6,7 +6,7 @@
 
 <h2>Pick The Parameters</h2>
 <form action="/report" method="get" class="w3-half">
-    <label for="placeName"><b>Place:</b></label>
+    <label for="placeName"><b>Place</b></label>
     <input class="w3-input w3-border" list="countries" type="text" id="placeName" name="placeName" required="required" placeholder="e.g. India" autocomplete="off" />
     <input type="hidden" id="placeType" name="placeType" />
     <input type="hidden" id="placeID" name="placeID" />
@@ -15,7 +15,7 @@
         <li class="suggested-item"></li>
     </ul>
 
-    <label for="time"><b>Averaging Time Interval:</b></label>
+    <label for="time"><b>Averaging Time Interval</b></label>
     <select id="time" name="temporal" class="w3-input w3-border">
         <option value="year" selected="selected">Yearly</option>
         <option value="month">Monthly</option>
@@ -57,9 +57,9 @@
         <input type="date" id="dateFrom" name="dateFrom" class="w3-input w3-border" />
         <label for="dateTo"><b>Until</b></label>
         <input type="date" id="dateTo" name="dateTo" class="w3-input w3-border" />
-        <div class="w3-right-align">This is for defining the range of data you want to look at.</div>
+        <div class="w3-right-align" style="margin-bottom: 10px">This is for defining the range of data you want to look at.</div>
     </div>
-    <input type="submit" value="GO!" class="w3-button w3-blue w3-large w3-wide"/>
+    <input type="submit" value="Go »" class="w3-button w3-blue w3-large w3-right w3-hover-green"/>
 </form>
 <script>
     // set ending date to today by default
