--- a/templates/index.html
+++ b/templates/index.html
@@ -2,7 +2,7 @@
 
 {% block content %}
 <div class="w3-container">
-<h1 class="w3-text-blue">AQ Report Sheet Generator</h1>
+<h1 class="w3-text-blue">AQ Report Sheet</h1>
 <h2>Pick The Parameters</h2>
 
 <form action="/report" method="get" class="w3-half">
